changes on team page fix horizontal scrollable lis

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -84,3 +84,8 @@ body {
 .swiper-slide {
   pointer-events: none;
 }
+
+.bg-custom{
+  background-image: url("https://assets.website-files.com/5837424ae11409586f837994/611b2d3c1a84f270060c9ec1_Texture.png"),
+  linear-gradient(#ffffff,#e9e9e9);
+}
